--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="Auracss.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
     <title>AURA</title>
 </head>
 <body>
@@ -16,25 +16,35 @@
     <h1 class="logostyle"> AURA
         <span style="font-family: 'Montserrat', sans-serif; font-size: 0.18em;">REALCE SUA BELEZA INTERIOR</span>
       </h1>
-      <div class="search-container">
-        <!-- Input com ícone de pesquisa -->
-        <i class="fa fa-search"></i>
-        <input type="text" style="padding-left: 30px; color:white;" placeholder="Buscar Produto">
+      <div class="search-container search">
+        <label for="searchInput">
+        <span class="material-symbols-outlined">search</span></label>
+        <input type="text" placeholder="Buscar Produto" id="searchInput">
     </div></div>
 </nav>
 <hr style="margin: 0; border-top: 1.5px solid #000000;">
 <div class="video-container">
     <div class="cabecalho3">
-    <a href="">TODOS OS PRODUTOS</a>
+    <a href="produtos.html">TODOS OS PRODUTOS</a>
     <a href="">AURA SUMMER</a>
-    <a href="">ROSTO</a>
-    <a href="">CORPO</a>
     <a href="">MAQUIAGEM</a>
     <a href="">LOJAS</a>
     </div>
-    
     <video class="video" width="70%" autoplay muted controls>
         <source src="AURA video.mp4" type="video/mp4">
     </video></div>
 </body>
 </html>
+
+<!-- 
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">Home</li>
+        </ol>
+      </nav>
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Produtos</li>
+        </ol>
+      </nav> -->
