--- a/produtos.html
+++ b/produtos.html
@@ -5,37 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos Aura</title>
     <link rel="stylesheet" href="Auracss.css">
+    <link rel="stylesheet" href="Produtos.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="produtos.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <header> <div id="cabecalho1">
-    <p class="stcabecalho1">PARCELE EM ATE 10X | CUPOM DE DESCONTO: BEAUTY253219</p></div>
+    <p class="stcabecalho1">PARCELE EM ATE 10X | CUPOM DE DESCONTO: BEAUTY243118</p></div>
 </header> 
 <nav> <div id="cabecalho2" class="stcabecalho2" >
-    <h1 class="logostyle"> AURA
-        <span style="font-family: 'Montserrat', sans-serif; font-size: 0.18em;">REALCE SUA BELEZA INTERIOR</span>
+    <i class="fa-solid fa-bars fa-lg" style="color: #ffffff;"></i>
+    <h1 class="logostyle"> <a href="Aura.html" style="color: inherit; text-decoration: none;">AURA</a>
+        <span class="subtitulo" style="font-family: 'Montserrat', sans-serif; font-size: 0.18em;">REALCE SUA BELEZA INTERIOR</span>
       </h1>
-      <div class="search-container search">
-        <label for="searchInput">
-        <span class="material-symbols-outlined">search</span></label>
-        <input type="text" placeholder="Buscar Produto" id="searchInput">
-    </div></div>
+      <div class="search-container">
+        <!-- Input com ícone de pesquisa -->
+        <i class="fa fa-search"></i>
+        <input type="text" class="bar-search" style="padding-left: 30px; color:white;" placeholder="Buscar Produto" id="searchInput">
+    </div>
 </nav>
 </nav>
 <hr style="margin: 0; border-top: 1.5px solid #000000;">
 <body><br>
-    <div class="card-columns card-container">
-     
+    <div class="varios-produtos">
+        <!-- <div class="card-produto">
+            <img src="/Produtos/Base.png" alt="Base" class="produto-imagem">
+            <h5 class="name">Base Liquida</h5>
+            <p class="descricao">Consistência hidratante, indicada para todos os tipos de pele.</p>
+            <h5 class="preco">R$44,99</h5>
+            <h6 class="parcelas-descricao">OU 10X DE R$ 4,49</h6>
+                <div class="botoes">
+                    <button class="btn-comprar">Comprar</button>
+                    <button class="btn-adicionar"><i class="fa-solid fa-cart-shopping" style="color: #ffffff; position: inherit;"></i></button>
+                </div>
+              </div> -->
     </div>
- 
-<!-- 
-    <div class="search">
-        <label for="searchInput">
-        </label>
-        <input type="text" placeholder="Pesquisar" id="searchInput">
-    </div>
-    <div class="card-container">
-        
-    </div> -->
 </html>
