--- a/index.html
+++ b/index.html
@@ -1,50 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="Auracss.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
+    <link rel="stylesheet" href="Produtos2.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>AURA</title>
 </head>
-<body>
 <header> <div id="cabecalho1">
-    <p class="stcabecalho1">PARCELE EM ATE 10X | CUPOM DE DESCONTO: BEAUTY253219</p></div>
-</header> 
+    <p class="stcabecalho1">PARCELE EM ATE 10X | CUPOM DE DESCONTO: BEAUTY243118</p></div>
+</header>
 <nav> <div id="cabecalho2" class="stcabecalho2" >
+      <i class="fa-solid fa-bars fa-lg" style="color: #ffffff;"></i>
     <h1 class="logostyle"> AURA
-        <span style="font-family: 'Montserrat', sans-serif; font-size: 0.18em;">REALCE SUA BELEZA INTERIOR</span>
+        <span class="subtitulo" style="font-family: 'Montserrat', sans-serif; font-size: 0.18em;">REALCE SUA BELEZA INTERIOR</span>
       </h1>
-      <div class="search-container search">
-        <label for="searchInput">
-        <span class="material-symbols-outlined">search</span></label>
-        <input type="text" placeholder="Buscar Produto" id="searchInput">
+      <div class="search-container">
+        <!-- Input com ícone de pesquisa -->
+        <i class="fa fa-search"></i>
+        <input type="text" class="bar-search" style="padding-left: 30px; color:white;" placeholder="Buscar Produto">
     </div></div>
 </nav>
+<body>
 <hr style="margin: 0; border-top: 1.5px solid #000000;">
-<div class="video-container">
     <div class="cabecalho3">
     <a href="produtos.html">TODOS OS PRODUTOS</a>
     <a href="">AURA SUMMER</a>
-    <a href="">MAQUIAGEM</a>
+  <a href="">MAQUIAGEM</a>
     <a href="">LOJAS</a>
     </div>
-    <video class="video" width="70%" autoplay muted controls>
+<div class="video-container">    
+    <video class="video" width="70%" controls autoplay muted loop>
         <source src="AURA video.mp4" type="video/mp4">
-    </video></div>
-</body>
-</html>
+    </video></div><br><br>
 
-<!-- 
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Home</li>
-        </ol>
-      </nav>
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Produtos</li>
-        </ol>
-      </nav> -->
+<div>
+  <h3 id="produtos_">PRODUTOS QUE VOCÊ SÓ ENCONTRA AQUI:</h3>
+    <section>
+        <article id="card">
+            <div class="card" class="card1" id="card1">
+                <img class="card-img-top" src="./Aura_ISA/AURA SUMMER.png" id="foto" alt="Imagem de capa do card">
+                <div class="card-body">
+                  <h3 class="card-title" id="title">KIT SUMMER</h3>
+                  <p class="card-text">Kit Exclusivo AURA Summer contendo Protetor Capilar, Hidratante Pôs-Sol, Protetor Solar, Hidratante de Rosto e Óleo Capilar.</p> 
+                  <p id="preço">R$159,99</p>
+                <p id="parcela">OU 10X DE R$ 15,99</p>
+              </div>
+            </div>
+
+              <div class="card" class="card2" id="card2">
+                <img class="card-img-top" src="./Aura_ISA/BLUSH BASTÃO.png" id="foto" alt="Imagem de capa do card">
+                <div class="card-body">
+                  <h3 class="card-title" id="title">BLUSH EM BASTÃO</h3>
+                  <p class="card-text"> Produto enriquecido com esqualano e óleo de argan, oferece emoliência e hidratação à pele. <br>(10 cores)</p>
+                    <p id="preço">R$49,99</p>
+                    <p id="parcela">OU 10X DE R$ 4,99</p>
+                </div>
+              </div>
+
+              <div class="card" class="card3" id="card3">
+                <img class="card-img-top" src="./Aura_ISA/BATOM MATE.png" id="foto" alt="Imagem de capa do card">
+                <div class="card-body">
+                  <h3 class="card-title" id="title">BATOM MATE</h3>
+                  <p class="card-text"> BATOM MATE
+                    Batom com aspecto mais sequinho, textura aveludada com efeito hidratante, secagem rapida. (30 cores)
+                    <p id="preço">R$44,99</p>
+                    <p id="parcela">OU 10X DE R$ 4,49</p>
+                </div>
+              </div>
+              <div class="card" class="card4" id="card4" >
+                <img class="card-img-top" src="./Aura_ISA/BASE CREMOSA.png" id="foto" alt="Imagem de capa do card">
+                <div class="card-body">
+                  <h3 class="card-title" id="title">BASE CREMOSA</h3>
+                  <p class="card-text">Produto possui uma consistência hidratante, indicada para todos os tipos de pele. <br>(36 tons)</p>
+                  <p id="preço">R$44,99</p>
+                  <p id="parcela">OU 10X DE R$ 4,49</p>
+              </div>
+              </div>
+        </article>
+    </section>    
+    <div id="tags">
+      <button type="button" class="btn btn-light"  id="lancamentos" onclick="lancamentos()">LANÇAMENTOS</button>
+      <button type="button" class="btn btn-light"  id="kits" onclick="kits()">KITS</button>
+      <button type="button" class="btn btn-light"  id="acessorios" onclick="acessorios()">ACESSÓRIOS</button>
+      <button type="button" class="btn btn-light"  id="promocoes" onclick="promocoes()">PROMOÇÕES</button>
+      <button type="button" class="btn btn-light"  id="prod_" onclick="prod_()">PRODUTOS</button>
+    </div>
+</div>
+</body>
+
+<footer>
+        <div>
+        <p class="title">REDES SOCIAIS</p><br>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-tiktok"></i>
+        <p>@AURA</p><br>
+        <i class="fa-brands fa-facebook"></i>
+        <p>@AURA.COMETICS</p>
+      </div>
+      <div>
+        <p class="title">CONTATOS</p><br>
+        <p>SAC: 0800 9981-94130<br>
+               EMAIL: AURA.COMETICS@GMAIL.COM</p>
+      </div>
+      <div >
+        <p class="title">TRABALHE CONOSCO</p><br>
+        <p>Deseja trabalhar ou fazer uma parceria com a maior marca de 
+          cosméticos do Brasil? Entre em contato com o email ao lado, 
+          preencha o formulário e aguarde  o retorno.</p>
+      </div>
+</footer>
+</html>
