--- a/produtos.html
+++ b/produtos.html
@@ -16,7 +16,7 @@
 </header> 
 <nav> <div id="cabecalho2" class="stcabecalho2" >
     <i class="fa-solid fa-bars fa-lg" style="color: #ffffff;"></i>
-    <h1 class="logostyle"> <a href="Aura.html" style="color: inherit; text-decoration: none;">AURA</a>
+    <h1 class="logostyle"> <a href="https://aura-lovat-two.vercel.app/" style="color: inherit; text-decoration: none;">AURA</a>
         <span class="subtitulo" style="font-family: 'Montserrat', sans-serif; font-size: 0.18em;">REALCE SUA BELEZA INTERIOR</span>
       </h1>
       <div class="search-container">
