--- a/produtos.html
+++ b/produtos.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos Aura</title>
-    <link rel="stylesheet" href="Auracss.css">
-    <link rel="stylesheet" href="Produtos.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="produtos.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="produtos.js" defer></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-<header> <div id="cabecalho1">
-    <p class="stcabecalho1">PARCELE EM ATE 10X | CUPOM DE DESCONTO: BEAUTY243118</p></div>
-</header> 
-<nav> <div id="cabecalho2" class="stcabecalho2" >
-    <i class="fa-solid fa-bars fa-lg" style="color: #ffffff;"></i>
-    <h1 class="logostyle"> <a href="https://aura-lovat-two.vercel.app/" style="color: inherit; text-decoration: none;">AURA</a>
-        <span class="subtitulo" style="font-family: 'Montserrat', sans-serif; font-size: 0.18em;">REALCE SUA BELEZA INTERIOR</span>
-      </h1>
-      <div class="search-container">
-        <!-- Input com ícone de pesquisa -->
-        <i class="fa fa-search"></i>
-        <input type="text" class="bar-search" style="padding-left: 30px; color:white;" placeholder="Buscar Produto" id="searchInput">
-    </div>
-</nav>
-</nav>
-<hr style="margin: 0; border-top: 1.5px solid #000000;">
-<body><br>
+
+<body>
+    <header>
+        <div id="cabecalho1">
+            <p class="stcabecalho1">PARCELE EM ATE 10X | CUPOM DE DESCONTO: BEAUTY243118</p>
+        </div>
+    </header>
+    <nav>
+        <div id="cabecalho2" class="stcabecalho2">
+            <i class="fa-solid fa-bars fa-lg" style="color: #ffffff;"></i>
+            <h1 class="logostyle"> <a href="https://aura-lovat-two.vercel.app/"
+                    style="color: inherit; text-decoration: none;">AURA</a>
+                <span class="subtitulo" style="font-family: 'Montserrat', sans-serif; font-size: 0.18em;">REALCE SUA
+                    BELEZA INTERIOR</span>
+            </h1>
+            <div class="search-container">
+                <!-- Input com ícone de pesquisa -->
+                <i class="fa fa-search"></i>
+                <input type="text" class="bar-search" style="padding-left: 30px; color:white;"
+                    placeholder="Buscar Produto" id="searchInput">
+            </div>
+    </nav>
+    </nav>
+    <hr style="margin: 0; border-top: 1.5px solid #000000;"><br>
     <div class="varios-produtos">
         <!-- <div class="card-produto">
             <img src="/Produtos/Base.png" alt="Base" class="produto-imagem">
@@ -41,4 +51,27 @@
                 </div>
               </div> -->
     </div>
+    <footer>
+        <div>
+            <p class="title">REDES SOCIAIS</p><br>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-tiktok"></i>
+            <p>@AURA</p><br>
+            <i class="fa-brands fa-facebook"></i>
+            <p>@AURA.COMETICS</p>
+        </div>
+        <div>
+            <p class="title">CONTATOS</p><br>
+            <p>SAC: 0800 9981-94130<br>
+               EMAIL: AURA.COMETICS@GMAIL.COM</p>
+        </div>
+        <div>
+            <p class="title">TRABALHE CONOSCO</p><br>
+            <p>Deseja trabalhar ou fazer uma parceria com a maior marca de
+                cosméticos do Brasil? Entre em contato com o email ao lado,
+                preencha o formulário e aguarde o retorno.</p>
+        </div>
+    </footer>
+</body>
+
 </html>
